Fix all savegames of a campaign being loaded accidentally